* fix trying to `notyShow()` while ssr @ client.ts * move `scrollBarWidth()` & `notyShow()` from `index.ts` to `client.ts` to allow cjs importing `index.ts` without resolving `import.meta` @ utils
* fix `max-inline-size` for `.container` will not override `max-width` with different name @ assets/css/global.css
* cast returning type of `queryFunction()` @ api/index.ts

* replace variable `envs` with `objectWithSameValues()` from `utils/index.ts`
* reduce the value of vue-query config `staleTime` from `+Infinity` to `2^53` to compatible with json
* opt-in some experimental features
@ nuxt.config.ts
@ fe

--- a/fe/src/assets/css/global.css
+++ b/fe/src/assets/css/global.css
@@ -21,6 +21,6 @@ a {
 
 @media (max-width: 991.98px) {
     .container { /* let all .container be like .container-fluid when vw is less than md breakpoint */
-        max-inline-size: 100%;
+        max-width: 100% !important;
     }
 }
